# x-raptor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  client.py  pyproject.toml  server.py
.github/workflows/: ci.yml  publish.yml
example/: chat_room.py  client.py  server.py
loadtest/: README.md  run.py  server.py
tests/: conftest.py  test_broadcast.py  test_connection.py  test_handler.py  test_integration.py  test_memory.py  test_middleware.py  test_nats.py  test_observability.py  test_property.py  test_redis.py  test_server.py
tests/domain/: test_request.py  test_response.py  test_route.py
tests/stub/: __init__.py
xraptor/: __init__.py  broadcaster.py  connection.py  handler.py  observability.py  server.py
xraptor/antenna_implementations/: __init__.py  memory.py  nats.py  redis.py
xraptor/core/: interfaces.py
xraptor/domain/: request.py  response.py  route.py
