[tool.poetry]
name = "xraptor"
version = "0.1.0"
description = ""
authors = ["Marco Sievers de Almeida <im.ximit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
meeseeks-singleton = "^0.4.4"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
