[project]
name = "xraptor"
version = "0.3.7"
description = "Fast as websocket easy as http"
authors = [{ name = "Marco Sievers de Almeida", email = "im.ximit@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "websockets>=12.0,<13",
    "python-ulid>=2.7.0,<3",
    "witch-doctor>=1.2.0,<2",
    "python-decouple>=3.8,<4",
    "meeseeks-singleton>=0.4.4,<0.5",
    "orjson>=3.11.9",
]

[project.optional-dependencies]
redis_version = ["redis>=5.0.8,<6"]
uvloop = ["uvloop>=0.19; sys_platform != 'win32'"]

[project.urls]
homepage = "https://github.com/CenturyBoys/x-raptor"
repository = "https://github.com/CenturyBoys/x-raptor"
documentation = "https://github.com/CenturyBoys/x-raptor"

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "pytest-asyncio>=0.23.8,<0.24",
    "ruff>=0.8.0,<0.9",
    "pre-commit>=3.5.0,<4",
    "mypy>=2.2.0",
    "pytest-cov>=7.1.0",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear,
# SIM simplify, C4 comprehensions, ASYNC (crítico p/ código asyncio), RUF ruff-specific
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "ASYNC", "RUF"]
ignore = ["E501"]  # comprimento de linha tratado pelo formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM", "ARG"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true  # meeseeks / witch_doctor não têm stubs
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=xraptor --cov-report=term-missing --cov-report=xml"

[tool.hatch.build.targets.sdist]
include = ["xraptor"]

[tool.hatch.build.targets.wheel]
include = ["xraptor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
